force-app/main/default/objects/Property_Ownership_Managment_District360__c/Property_Ownership_Managment_District360__c.object-meta.xml
<CustomObject>
    <description>Property Ownership and Management are the Accounts and Contacts who play an Ownership or Management role with each property, as designated through the &quot;role&quot; that is selected for each.</description>
    <label>Property Ownership &amp; Management</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Property Ownership &amp; Management Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Ownership &amp; Management</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>