force-app/main/default/objects/Property_Ownership_Managment_District360__c/fields/Account_District360__c.field-meta.xml
<CustomField>
    <fullName>Account_District360__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Individual Account owns this property</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Property Ownership &amp; Management</relationshipLabel>
    <relationshipName>Property_Ownership_Management_D360</relationshipName>
    <type>Lookup</type>
</CustomField>