force-app/main/default/objects/Property_Ownership_Managment_District360__c/fields/Contact_District360__c.field-meta.xml
<CustomField>
    <fullName>Contact_District360__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Individual Contact owns this property</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Property Ownership &amp; Management</relationshipLabel>
    <relationshipName>Property_Ownership_Management_D360</relationshipName>
    <type>Lookup</type>
</CustomField>