force-app/main/default/objects/Property_Ownership_Managment_District360__c/fields/Property_District360__c.field-meta.xml
<CustomField>
    <fullName>Property_District360__c</fullName>
    <label>Property</label>
    <referenceTo>Property_District360__c</referenceTo>
    <relationshipLabel>Property Ownership &amp; Management</relationshipLabel>
    <relationshipName>Property_Ownership_Management_D360</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>