force-app/main/default/objects/Property_Ownership_Managment_District360__c/fields/Roles_District360__c.field-meta.xml
<CustomField>
    <fullName>Roles_District360__c</fullName>
    <label>Roles</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legal Representative</fullName>
            </value>
            <value>
                <fullName>Property Manager</fullName>
            </value>
            <value>
                <fullName>Property Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>