force-app/main/default/objects/Property_Ownership_Managment_District360__c/validationRules/Company_or_Contact_inserted_D360.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_or_Contact_inserted_D360</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 

NOT(ISblank(Account_District360__c   )) ,
NOT(ISblank(Contact_District360__c ) )
)</errorConditionFormula>
    <errorMessage>You can select either Contact or Company.</errorMessage>
</ValidationRule>